# LMCA-TIC

./: README.md  pyproject.toml  tmp_smoke_bie_cli.jsonl
configs/datasets/: icews05_15.yaml  icews14.yaml
configs/experiments/: ablation_wo_gate_icews14.yaml  ablation_wo_llm_icews14.yaml  ablation_wo_tcn_icews14.yaml  ablation_wo_tgn_icews14.yaml  full_icews05_15.yaml  full_icews14.yaml  icews14_demo_plus_qwen25_05b_a10.yaml  icews14_record_qwen25_05b_a10.yaml  micro_ours_ni_sl_icews14.yaml  micro_v1_gs_icews14.yaml  micro_v2_ni_icews14.yaml  micro_v3_sl_icews14.yaml  micro_v4_gs_ni_sl_icews14.yaml  negative_contrastive_icews14.yaml  negative_ontology_icews14.yaml  negative_random_icews14.yaml  smoke_icews14.yaml
configs/models/: qwen_qlora.yaml  smoke.yaml
docs/: modelscope_a10_offline_workflow.md  modelscope_experiment_commands.md
notebooks/: icews14_record_workflow.ipynb
outputs/icews14_record_qwen25_05b_a10/: graph_summary.json  test_metrics.json  train_history.jsonl
references/: table3_2_reference.csv
scripts/: _bootstrap.py  evaluate.py  merge_main_table.py  plot_compute_tradeoff.py  plot_training_curves.py  run_icews14_record_workflow.sh  run_icews14_suite.py
scripts/record_steps/: 00_check_env.sh  01_split_record_data.sh  02_build_bie.sh  03_preprocess.sh  04_train.sh  05_evaluate.sh  06_plot.sh  07_show_results.sh  common.sh
src/lmca_tic/: __init__.py  cli.py
tests/: test_bie.py  test_bie_builder.py  test_config_loader.py  test_filtered_eval.py  test_fusion.py  test_kgist.py  test_negative_sampling.py  test_preprocess.py
(+38 files in other folders)
