[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lmca-tic"
version = "0.1.0"
description = "LMCA-TIC: LLM Context-Aware Temporal Inductive Completion"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Codex" }
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "PyYAML>=6.0",
  "tqdm>=4.66",
  "torch>=2.1",
  "transformers>=4.40",
  "peft>=0.11",
  "accelerate>=0.29",
]

[project.optional-dependencies]
graph = [
  "torch-geometric>=2.5",
  "faiss-cpu>=1.8",
]
qlora = [
  "bitsandbytes>=0.43",
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=4.0",
]

[project.scripts]
lmca-tic = "lmca_tic.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
